@@ -14,7 +14,7 @@
 
   <groupId>com.azure</groupId>
   <artifactId>azure-communication-jobrouter</artifactId>
-  <version>1.1.0-beta.1</version> <!-- {x-version-update;com.azure:azure-communication-jobrouter;current} -->
+  <version>1.2.0-beta.1</version> <!-- {x-version-update;com.azure:azure-communication-jobrouter;current} -->
 
   <name>Microsoft Azure client library for Azure Communication Services JobRouter application</name>
   <description>
@@ -44,7 +44,6 @@
       --add-opens com.azure.communication.jobrouter/com.azure.communication.jobrouter.implementation=ALL-UNNAMED
       --add-opens com.azure.communication.common/com.azure.communication.common.implementation=ALL-UNNAMED
       --add-opens com.azure.core/com.azure.core.implementation.util=ALL-UNNAMED
-      --add-opens com.azure.http.netty/com.azure.core.http.netty.NettyAsyncHttpClientBuilder=ALL-UNNAMED
     </javaModulesSurefireArgLine>
   </properties>
 
